--- a/Views/Home/Image.cshtml
+++ b/Views/Home/Image.cshtml
@@ -8,12 +8,13 @@
 </div>
 <div class="col-lg-6">
     <br />
-    <input type="file" id="image" onchange="getBaseUrl()"/>
+    <input type="file" id="image" onchange="getBaseUrl()" />
 </div>
 <div class="col-lg-6 text-right">
     <br />
     <button class="btn btn-primary" id="btnConvert">Convert Image</button>
 </div>
+<div class="col-lg-12 messageContainer" style="margin-top: 10px"></div>
 <div class="col-lg-12">
     <br />
     <table class="table table-bordered">
@@ -22,16 +23,15 @@
             @*<th>Image Text</th>*@
             <th>Date Converted</th>
         </tr>
-        @foreach(var item in ViewBag.List)
-            {
-                <tr>
-                    <td>@item.ImageName</td>
-                    @*<td>@item.ImageText</td>*@
-                    <td>@item.DateConverted</td>
-                </tr>
-            }
+        @foreach (var item in ViewBag.List)
+        {
+            <tr>
+                <td>@item.ImageName</td>
+                @*<td>@item.ImageText</td>*@
+                <td>@item.DateConverted</td>
+            </tr>
+        }
     </table>
 </div>
-<div class="col-lg-12 messageContainer"></div>
 
 <script type="text/javascript" src="~/Scripts/App/base64Converter.js"></script>
